name:                plunger
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/adroll/plunger
license:             MIT
license-file:        LICENSE
author:              AdRoll Inc
maintainer:          oleg.avdeev@adroll.com
copyright:           2017 AdRoll Inc.
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Plunger
  build-depends:       base >= 4.7 && < 5
                       , language-python
                       , filepath >= 1.4.1.1
                       , containers
                       , ansi-terminal
  default-language:    Haskell2010

executable plunger
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , plunger
                     , filepath >= 1.4.1.1
                     , containers
  default-language:    Haskell2010

test-suite plunger-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , plunger
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adroll/plunger
